--- a/2DRunner.vcxproj.filters
+++ b/2DRunner.vcxproj.filters
@@ -19,150 +19,110 @@
     <Filter Include="Source Files\game">
       <UniqueIdentifier>{421d0ad3-3c39-4717-bbe7-bcf005d08873}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\game\shaders">
-      <UniqueIdentifier>{714a3aff-74b2-4d7f-9862-5344324687bd}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\engine">
       <UniqueIdentifier>{942a5f14-b645-4550-8e5c-f1c19ce9e06a}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\game">
       <UniqueIdentifier>{ed9f8d83-7c29-415d-a1de-4dc7d86c750c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Shaders">
+      <UniqueIdentifier>{714a3aff-74b2-4d7f-9862-5344324687bd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GameObject.cpp">
-      <Filter>Source Files\engine</Filter>
-    </ClCompile>
-    <ClCompile Include="shader.cpp">
-      <Filter>Source Files\engine</Filter>
-    </ClCompile>
-    <ClCompile Include="sprite.cpp">
-      <Filter>Source Files\engine</Filter>
-    </ClCompile>
-    <ClCompile Include="stb_image.cpp">
-      <Filter>Source Files\engine</Filter>
-    </ClCompile>
-    <ClCompile Include="background.cpp">
-      <Filter>Source Files\game</Filter>
-    </ClCompile>
-    <ClCompile Include="enemy.cpp">
-      <Filter>Source Files\game</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files\game</Filter>
     </ClCompile>
-    <ClCompile Include="player.cpp">
+    <ClCompile Include="game\background.cpp">
       <Filter>Source Files\game</Filter>
     </ClCompile>
-    <ClCompile Include="UIElement.cpp">
+    <ClCompile Include="game\enemy.cpp">
       <Filter>Source Files\game</Filter>
     </ClCompile>
-    <ClCompile Include="hitBox.cpp">
+    <ClCompile Include="game\player.cpp">
+      <Filter>Source Files\game</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\GameObject.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="TextRenderer.cpp">
+    <ClCompile Include="engine\hitBox.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="SpriteAnimation.cpp">
+    <ClCompile Include="engine\shader.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\sprite.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\SpriteAnimation.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\stb_image.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\TextRenderer.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\UIElement.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
     <ClCompile Include="C:\opengl-wrappers\glad\src\glad.c">
-      <Filter>Source Files\engine</Filter>
+      <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="personShader.vert">
-      <Filter>Source Files\game\shaders</Filter>
-    </None>
-    <None Include="personShader.frag">
-      <Filter>Source Files\game\shaders</Filter>
-    </None>
-    <None Include="boringImageShader.vert">
-      <Filter>Source Files\game\shaders</Filter>
-    </None>
-    <None Include="boringImageShader.frag">
-      <Filter>Source Files\game\shaders</Filter>
-    </None>
-    <None Include="textShader.vert">
-      <Filter>Source Files\game\shaders</Filter>
-    </None>
-    <None Include="textShader.frag">
-      <Filter>Source Files\game\shaders</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="GameObject.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="shader.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="sprite.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="stb_image.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="UIElement.h">
+    <ClInclude Include="game\background.h">
       <Filter>Header Files\game</Filter>
     </ClInclude>
-    <ClInclude Include="background.h">
+    <ClInclude Include="game\enemy.h">
       <Filter>Header Files\game</Filter>
     </ClInclude>
-    <ClInclude Include="enemy.h">
+    <ClInclude Include="game\player.h">
       <Filter>Header Files\game</Filter>
     </ClInclude>
-    <ClInclude Include="player.h">
-      <Filter>Header Files\game</Filter>
-    </ClInclude>
-    <ClInclude Include="TextRenderer.h">
+    <ClInclude Include="engine\GameObject.h">
       <Filter>Header Files\engine</Filter>
     </ClInclude>
-    <ClInclude Include="hitBox.h">
+    <ClInclude Include="engine\hitBox.h">
       <Filter>Header Files\engine</Filter>
     </ClInclude>
-    <ClInclude Include="SpriteAnimation.h">
+    <ClInclude Include="engine\shader.h">
+      <Filter>Header Files\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\sprite.h">
+      <Filter>Header Files\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\SpriteAnimation.h">
+      <Filter>Header Files\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\stb_image.h">
+      <Filter>Header Files\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\TextRenderer.h">
+      <Filter>Header Files\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\UIElement.h">
       <Filter>Header Files\engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="X:\Game Assets\buoy.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="X:\Assets\buoy8bit.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="X:\Assets\swimmingBaby.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="X:\Assets\heartSprite.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="X:\Assets\background_sky.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="X:\Assets\water1.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="X:\Assets\water2.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="X:\Assets\water3.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="X:\Assets\basic_animation.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="X:\Assets\babySpriteSheet.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <Media Include="Footsteps.wav">
-      <Filter>Resource Files</Filter>
-    </Media>
-    <Media Include="sevenptone.wav">
-      <Filter>Resource Files</Filter>
-    </Media>
+    <None Include="Shaders\boringImageShader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\boringImageShader.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\personShader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\personShader.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\textShader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\textShader.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
